# prompt-declaration-language

./: .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  README.md  bad_examples.ipynb  bandit.yaml  baseline_gsm8k.ipynb  bea19.py  dockerfile  env_test.py  fever.ipynb  fever_json.ipynb  func_calling.ipynb  gsm8k.ipynb  gsmhard.ipynb  logprob_analysis.ipynb  mbpp.ipynb  mkdocs.yml  mypy.ini  opticonfig.yml  opticonfig_evalplus.yml  opticonfig_fever.yml  opticonfig_gsm8k.yml  out.json  pdl-schema.json  plotting_exp.ipynb  process_gsm8k.py  process_mbpp.py  pylintrc  pyproject.toml  requirements.txt  rewoo_ex.txt  ruff.toml  run_pdl_examples.sh  schema.json  setup.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  mkdocs-gh-pages.yml  pdl-live-react-tests.yml  publish-quay.yaml  release-static-web-app.yml  release-ui.yml  release.yml  run-examples-jing.yml  run-examples-modified.yml  run-examples-prep.yml  run-examples.yml  rust-interpreter.yml  tauri-cli.yml  viewer-tests.yml
Formula/: README.md  pdl.rb
benchmarks/: README.md  bench_analyzer.py  benchmark.py  fever_benchmark.py  gsm8k_benchmark.py  live_code_benchmark.py  math500_benchmark.py  mbpp_benchmark.py  run_all.py  run_benchmark.py
benchmarks/datasets/: README.md  get_fever.py  get_live_code_bench.py  get_math_500.py  get_mbpp.py
benchmarks/experiments/: fever-t0.8-p5-gpt-is.yaml  fever-t0.8-p5-gpt-maj.yaml  fever-t0.8-p5-gpt-smc.yaml  fever-t0.8-p5-llama-is.yaml  fever-t0.8-p5-llama-smc.yaml  fever-t0.8-p5-llama4-is.yaml  fever-t0.8-p5-llama4-smc.yaml  gsm8k-t0.8-p5-gpt-is.yaml  gsm8k-t0.8-p5-gpt-smc.yaml  gsm8k-t0.8-p5-granite-is.yaml  gsm8k-t0.8-p5-granite-smc.yaml  mbpp-t0.8-p5-gpt-is.yaml  (+28 more)
docs/: 404.html  Gemfile  README.md  _config.yml  api_reference.md  autopdl.md  contrib.md  index.html  objects.inv  ppdl.md  sitemap.xml  telemetry.md  tutorial.md  viewer.md
docsource/: README.md  api_reference.md  contrib.md  tutorial.md  viewer.md
examples/: test.pdl
exp_configs/: opticonfig_evalplus.yml  opticonfig_fever.yml  opticonfig_gsm8k.yml  update_exp_configs.ipynb
pdl/: __init__.py  benchmark.py  bugfinder.py  generators_utils.py  optimize.py  pdl.py  pdl_ast.py  pdl_ast_utils.py  pdl_dumper.py  pdl_interpreter.py  pdl_llms.py  pdl_location_utils.py  pdl_notebook_ext.py  pdl_parser.py  pdl_runner.py  pdl_scheduler.py  pdl_schema_checker.py  pdl_schema_error_analyzer.py  pdl_schema_utils.py  pdl_schema_validator.py  pdl_utils.py  process.py  python_exec.py  ui.py
pdl-live/: .eslintrc.json  README.md  eslint.config.js  index.html  package.json  tsconfig.json  webpack.config.js
pdl-live-react/: .gitignore  README.md  beeai-requirements.txt  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  requirements.txt  tsconfig.app.json  tsconfig.node.json  vite.config.ts
pdl-live-react/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
pdl-live-react/src-tauri/capabilities/: default.json  desktop.json
pdl-live-react/src-tauri/icons/: icon.icns
pdl-live-react/src-tauri/src/: cli.rs  gui.rs  lib.rs  util.rs
pdl-live-react/src-tauri/src/cli/: run.rs  setup.rs
pdl-live-react/src-tauri/src/commands/: interpreter.rs  mod.rs  read_trace.rs  replay.rs  replay_prep.rs
pdl-live-react/src-tauri/src/compile/: beeai.rs  mod.rs
pdl-live-react/src-tauri/src/interpreter/: #schema.rs#  .#schema.rs  extract.rs  load.rs  mod.rs  pip.rs  pull.rs  requirements.rs  run.rs  shasum.rs
pdl-live-react/src-tauri/src/pdl/: ast.rs  extract.rs  interpreter.rs  interpreter_tests.rs  mod.rs  pip.rs  pull.rs  requirements.rs  run.rs
pdl-live-react/src-tauri/tests/cli/: call-no-args.pdl  call-with-args.pdl  code-python.pdl  data1.pdl  data2.pdl  data3.pdl  data4.pdl  if1.pdl  if2.pdl  include1.pdl  json-parser-lastOf.pdl  json-parser.pdl  jsonl-parser.pdl  model-input-array.pdl  model-input-nested.pdl  model-input-string.pdl  object1.pdl  object2.pdl  read-file.pdl  read-stdin.pdl  regex-findall.pdl  repeat1.pdl  repeat2.pdl  repeat3.pdl  scoping_1.pdl  scoping_1_wrapper.pdl
pdl-live-react/src-tauri/tests/data/: bee_1.py  foo.txt  struct.yaml
scripts/: generate_pdl_examples_runner.sh
spnl/: .gitignore  Cargo.toml  README.md
spnl/haystack/: Cargo.toml  README.md  by-k.sh  p99.sh  rag-overlap-gen.sh  rag_overlap.sh  scatter.sh
spnl/haystack/experiment_data/: haystack.numbers  out-v2.k1  out-v2.k4  out-v3.n8.k1  out-v3.n8.k2  out-v3.n8.k4  out-v3.n8.k8  out.k1  out.k4  out.variant2  rag.numbers
spnl/haystack/src/: main.rs
spnl/spnl/: Cargo.toml
spnl/spnl/src/: lib.rs
spnl/spnl/src/run/: embed.rs  extract.rs  generate.rs  mod.rs  ollama.rs  openai.rs  plan.rs  pull.rs  result.rs  run.rs  with.rs
spnl/spnl/src/run/with/: storage.rs
spnl/spnl_cli/: Cargo.toml
spnl/spnl_cli/src/: args.rs  main.rs
spnl/spnl_cli/src/demos/: chat.rs  demos.rs  email.lisp  email.rs  email2.lisp  email2.rs  email3-evaluate-system-prompt.txt  email3-generate-system-prompt.txt  email3.lisp  email3.rs  gsm8k-questions.json  gsm8k.rs  hello.lisp  mod.rs  rag.rs
spnl/spnl_cli/src/demos/sweagent/: mod.rs  system.txt  user.txt
spnl/spnl_cli/src/demos/sweagent/fewshots/: 1.txt  2.txt  3.txt  4.txt
spnl/spnl_cli/src/demos/sweagent/inputs/: 2.txt
tests/: test_array.py  test_ast_utils.py  test_code.py  test_cond.py  test_context.py  test_data.py  test_defaults.py  test_defs.py  test_dump.py  test_errors.py  test_examples.py  test_examples_parse.py  test_examples_run.py  test_examples_run.yaml  test_examples_run_jing.py  test_examples_run_new.py  test_expr.py  test_fallback.py  test_for.py  test_function.py  test_hello.py  test_implicit_ignore.py  test_include.py  test_independent.py  test_input.py  test_lib_version.py  test_line_table.py  test_linter.py  test_match.py  test_messages.py  test_model.py  test_object.py  test_optimizer.py  test_parse.py  test_parser.py  test_repeat.py  test_retry.py  test_retry_exception_filtering.py  test_role.py  test_runtime_errors.py  (+5 more)
ui/: README.md  hello.html  index.html  package.json  webpack.config.js
(+1807 files in other folders)
