[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "pdl"
dynamic = ["version"]
dependencies = [
  "pydantic",
  "ibm-generative-ai",
  "requests",
  "python-dotenv",
  "jinja2",
  "PyYAML",
  "jsonschema",
  "litellm",
  "termcolor",
  "ipython"
]
authors = [
  { name="Mandana Vaziri", email="mvaziri@us.ibm.com" },
  { name="Louis Mandel", email="lmandel@us.ibm.com"},
  { name="Claudio Spiess" },
  { name="Martin Hirzel", email="hirzel@us.ibm.com" }
]
description = "Prompt Declaration Language"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "black",
  "pre-commit",
  "pytest"
]
examples = [
  "wikipedia",
  "textdistance",
  "faiss-cpu",
  "datasets",
  "sympy"
]
docs = [
  "mkdocs",
  "mkdocstrings[python]",
  "mkdocs-material",
  "pymdown-extensions"
]
all = [ "pdl[dev,examples,docs]" ]

[project.urls]
Homepage = "https://ibm.github.io/prompt-declaration-language/"
Documentation = "https://ibm.github.io/prompt-declaration-language/tutorial/"
Repository = "https://github.com/IBM/prompt-declaration-language"
Issues = "https://github.com/IBM/prompt-declaration-language/issues"

[project.scripts]
pdl = "pdl.pdl:main"