[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pdl"
version = "0.0.1"
dependencies = [
  "pydantic~=2",
  "ibm-generative-ai~=3",
  "requests~=2",
  "python-dotenv~=1",
  "jinja2~=3",
  "PyYAML~=6",
  "jsonschema~=4",
  "litellm~=1.47",
  "termcolor~=2",
  "ipython~=8"
]
authors = [
  { name="Mandana Vaziri", email="mvaziri@us.ibm.com" },
  { name="Louis Mandel", email="lmandel@us.ibm.com"},
  { name="Claudio Spiess", email="claudiosv@users.noreply.github.com" },
  { name="Martin Hirzel", email="hirzel@us.ibm.com" }
]
description = "Prompt Declaration Language"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pre-commit~=3",
  "pytest~=8",
  "pydantic~=2.9"
]
examples = [
  "wikipedia~=1",
  "textdistance~=4",
  "faiss-cpu~=1",
  "datasets>2,<4",
  "sympy~=1"
]
docs = [
  "mkdocs~=1",
  "mkdocstrings[python]~=1",
  "mkdocs-material~=9",
  "pymdown-extensions~=10"
]
all = [ "pdl[dev,examples,docs]" ]

[project.urls]
Homepage = "https://ibm.github.io/prompt-declaration-language/"
Documentation = "https://ibm.github.io/prompt-declaration-language/tutorial/"
Repository = "https://github.com/IBM/prompt-declaration-language"
Issues = "https://github.com/IBM/prompt-declaration-language/issues"

[project.scripts]
pdl = "pdl.pdl:main"