[package]
name = "pdl"
version = "0.4.2"
description = "Prompt Declaration Language"
authors = ["nickm@us.ibm.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
#tauri-plugin-pty= { path = "../../../tauri-plugin-pty" }
tauri-plugin-pty= "0.1"
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempdir = "0.3.7"
urlencoding = "2.1.3"
tempfile = "3.16.0"
duct = "0.13.7"
rayon = "1.10.0"
yaml-rust2 = "0.10.0"
futures = "0.3.31"
sha2 = "0.10.8"
base64ct = { version = "1.7.1", features = ["alloc"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-window-state = "2"

