[package]
name = "pdl"
version = "0.6.2"
description = "Prompt Declaration Language"
authors = ["nickm@us.ibm.com"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
#tauri-plugin-pty= { path = "../../../tauri-plugin-pty" }
tauri-plugin-pty= "0.1"
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
urlencoding = "2.1.3"
tempfile = "3.16.0"
duct = "0.13.7"
rayon = "1.10.0"
yaml-rust2 = "0.10.0"
futures = "0.3.31"
sha2 = "0.10.8"
base64ct = { version = "1.7.1", features = ["alloc"] }
dirs = "6.0.0"
serde_norway = "0.9.42"
minijinja = { version = "2.9.0", features = ["custom_syntax"] }
ollama-rs = { version = "0.3.1", features = ["stream"] }
owo-colors = "4.2.0"
rustpython-vm = { git="https://github.com/RustPython/RustPython.git", features= ["importlib", "threading", "encodings"] } # "0.4.0"
async-recursion = "1.1.1"
tokio-stream = "0.1.17"
tokio = { version = "1.44.1", features = ["io-std"] }
indexmap = { version = "2.9.0", features = ["serde"] }
rustpython-stdlib = { git="https://github.com/RustPython/RustPython.git", features = ["ssl-vendor"] } # 0.4.0
rustpython-pylib = { git="https://github.com/RustPython/RustPython.git", features = ["freeze-stdlib"] } # 0.4.0
schemars = "0.8.22"
fs4 = "0.13.1"
derive_builder = "0.20.2"
iana-time-zone = "0.1.63"
async-openai = "0.28.1"
regex = "1.11.1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2"
tauri-plugin-window-state = "2"
