[package]
name = "spnl_cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "spnl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
ptree = { version = "0.5.2", default-features = false, features = ["ansi"] }
rustyline = { version = "15.0.0", features = ["with-file-history"] }
serde = "1.0.219"
serde_json = "1.0.140"
spnl = { version = "0.1.0", path = "../spnl" }
tinytemplate = "1.2.1"
tokio = "1.44.2"
